parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program2 program3 main_ahead main_method
Rule 2     main_ahead -> <empty>
Rule 3     program2 -> variable_declaration program2
Rule 4     program2 -> empty
Rule 5     program3 -> method_declaration program3
Rule 6     program3 -> empty
Rule 7     variable_declaration -> type variable_declaration2
Rule 8     variable_declaration2 -> variable_declarator variable_declaration3
Rule 9     variable_declaration3 -> COMMA variable_declaration2
Rule 10    variable_declaration3 -> SEMICOLON
Rule 11    variable_declarator -> ID seen_id variable_declarator2 variable_declarator3
Rule 12    seen_id -> <empty>
Rule 13    variable_declarator2 -> LSQUARE CSTINT RSQUARE
Rule 14    variable_declarator2 -> empty
Rule 15    variable_declarator3 -> = superexpression
Rule 16    variable_declarator3 -> empty
Rule 17    method_declaration -> FUNC type ID seen_function_id ( method_declaration2 method_declaration3
Rule 18    seen_function_id -> <empty>
Rule 19    method_declaration2 -> parameter_list
Rule 20    method_declaration2 -> empty
Rule 21    method_declaration3 -> ) seen_method_start block_statement
Rule 22    seen_method_start -> <empty>
Rule 23    parameter_list -> parameter parameter_list2
Rule 24    parameter_list2 -> COMMA parameter_list
Rule 25    parameter_list2 -> empty
Rule 26    parameter -> type ID
Rule 27    main_method -> MAIN CHEESE ( ) block_statement
Rule 28    type -> INT
Rule 29    type -> DOUBLE
Rule 30    type -> STRING
Rule 31    type -> VOID
Rule 32    variable_assignment -> ID id_or_array
Rule 33    id_or_array -> = superexpression
Rule 34    id_or_array -> LSQUARE superexpression RSQUARE = superexpression
Rule 35    superexpression -> expression superexpression2
Rule 36    superexpression2 -> andor superexpression
Rule 37    superexpression2 -> empty
Rule 38    andor -> AND
Rule 39    andor -> OR
Rule 40    expression -> numeric_expression compare
Rule 41    compare -> compare_symbols numeric_expression seen_comp
Rule 42    compare -> empty
Rule 43    compare_symbols -> CEQ
Rule 44    compare_symbols -> CGT
Rule 45    compare_symbols -> CGE
Rule 46    compare_symbols -> CLT
Rule 47    compare_symbols -> CLE
Rule 48    compare_symbols -> CNE
Rule 49    seen_comp -> <empty>
Rule 50    numeric_expression -> term seen_term numeric_expression2
Rule 51    seen_term -> <empty>
Rule 52    numeric_expression2 -> arithOp numeric_expression
Rule 53    numeric_expression2 -> empty
Rule 54    arithOp -> +
Rule 55    arithOp -> -
Rule 56    term -> factor term2
Rule 57    term2 -> geomOp term
Rule 58    term2 -> empty
Rule 59    geomOp -> *
Rule 60    geomOp -> /
Rule 61    factor -> cst_expression
Rule 62    factor -> ( seen_lpar superexpression ) seen_rpar
Rule 63    seen_lpar -> <empty>
Rule 64    seen_rpar -> <empty>
Rule 65    cst_expression -> CSTDOUBLE
Rule 66    cst_expression -> CSTINT
Rule 67    cst_expression -> CSTSTRING
Rule 68    cst_expression -> ID seen_id_or_func cst_expression2
Rule 69    seen_id_or_func -> <empty>
Rule 70    cst_expression2 -> LSQUARE seen_LSQUARE superexpression RSQUARE seen_RSQUARE
Rule 71    cst_expression2 -> function_call
Rule 72    cst_expression2 -> empty
Rule 73    seen_LSQUARE -> <empty>
Rule 74    seen_RSQUARE -> <empty>
Rule 75    function_call -> seen_func_id ( args )
Rule 76    seen_func_id -> <empty>
Rule 77    args -> arg
Rule 78    args -> empty
Rule 79    arg -> numeric_expression seen_arg more_args
Rule 80    seen_arg -> <empty>
Rule 81    more_args -> COMMA arg
Rule 82    more_args -> empty
Rule 83    loop_statement -> loophead block_statement seen_loop_block
Rule 84    loophead -> FOR ( variable_assignment seen_assignment1 SEMICOLON superexpression seen_for_exp SEMICOLON variable_assignment seen_assignment2 )
Rule 85    loophead -> WHILE ( seen_while_LPAR superexpression seen_while_exp )
Rule 86    seen_assignment1 -> <empty>
Rule 87    seen_for_exp -> <empty>
Rule 88    seen_assignment2 -> <empty>
Rule 89    seen_while_LPAR -> <empty>
Rule 90    seen_while_exp -> <empty>
Rule 91    seen_loop_block -> <empty>
Rule 92    if_statement -> IF ( superexpression ) seen_condition block_statement seen_condition_block if_statement2
Rule 93    seen_condition -> <empty>
Rule 94    seen_condition_block -> <empty>
Rule 95    if_statement2 -> ELSE block_statement
Rule 96    if_statement2 -> empty
Rule 97    block_statement -> LBRACKET block_statement2 RBRACKET
Rule 98    block_statement2 -> statement block_statement2
Rule 99    block_statement2 -> empty
Rule 100   read_statement -> SCAN ( ID ) SEMICOLON
Rule 101   print_statement -> PRINT ( superexpression ) SEMICOLON
Rule 102   geometry_statement -> move
Rule 103   geometry_statement -> rotate
Rule 104   geometry_statement -> arc
Rule 105   geometry_statement -> home
Rule 106   geometry_statement -> pdown
Rule 107   geometry_statement -> pup
Rule 108   geometry_statement -> setp
Rule 109   geometry_statement -> pcolor
Rule 110   geometry_statement -> psize
Rule 111   geometry_statement -> pclear
Rule 112   move -> MOVE ( superexpression )
Rule 113   rotate -> ROTATE ( superexpression )
Rule 114   arc -> ARC ( superexpression COMMA superexpression )
Rule 115   home -> HOME ( )
Rule 116   pdown -> PDOWN ( )
Rule 117   pup -> PUP ( )
Rule 118   setp -> SETP ( superexpression COMMA superexpression )
Rule 119   pcolor -> PCOLOR ( superexpression COMMA superexpression COMMA superexpression )
Rule 120   psize -> PSIZE ( superexpression )
Rule 121   pclear -> PCLEAR ( )
Rule 122   statement -> variable_declaration
Rule 123   statement -> variable_assignment SEMICOLON
Rule 124   statement -> superexpression SEMICOLON
Rule 125   statement -> if_statement
Rule 126   statement -> loop_statement
Rule 127   statement -> return
Rule 128   statement -> print_statement
Rule 129   statement -> read_statement
Rule 130   statement -> geometry_statement SEMICOLON
Rule 131   return -> RETURN superexpression SEMICOLON
Rule 132   empty -> <empty>

Terminals, with rules where they appear

(                    : 17 27 62 75 84 85 92 100 101 112 113 114 115 116 117 118 119 120 121
)                    : 21 27 62 75 84 85 92 100 101 112 113 114 115 116 117 118 119 120 121
*                    : 59
+                    : 54
-                    : 55
/                    : 60
=                    : 15 33 34
AND                  : 38
ARC                  : 114
CEQ                  : 43
CGE                  : 45
CGT                  : 44
CHEESE               : 27
CLE                  : 47
CLT                  : 46
CNE                  : 48
COMMA                : 9 24 81 114 118 119 119
CSTDOUBLE            : 65
CSTINT               : 13 66
CSTSTRING            : 67
DOUBLE               : 29
ELSE                 : 95
FOR                  : 84
FUNC                 : 17
HOME                 : 115
ID                   : 11 17 26 32 68 100
IF                   : 92
INT                  : 28
LBRACKET             : 97
LSQUARE              : 13 34 70
MAIN                 : 27
MOVE                 : 112
OR                   : 39
PCLEAR               : 121
PCOLOR               : 119
PDOWN                : 116
PRINT                : 101
PSIZE                : 120
PUP                  : 117
RBRACKET             : 97
RETURN               : 131
ROTATE               : 113
RSQUARE              : 13 34 70
SCAN                 : 100
SEMICOLON            : 10 84 84 100 101 123 124 130 131
SETP                 : 118
STRING               : 30
VOID                 : 31
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

andor                : 36
arc                  : 104
arg                  : 77 81
args                 : 75
arithOp              : 52
block_statement      : 21 27 83 92 95
block_statement2     : 97 98
compare              : 40
compare_symbols      : 41
cst_expression       : 61
cst_expression2      : 68
empty                : 4 6 14 16 20 25 37 42 53 58 72 78 82 96 99
expression           : 35
factor               : 56
function_call        : 71
geomOp               : 57
geometry_statement   : 130
home                 : 105
id_or_array          : 32
if_statement         : 125
if_statement2        : 92
loop_statement       : 126
loophead             : 83
main_ahead           : 1
main_method          : 1
method_declaration   : 5
method_declaration2  : 17
method_declaration3  : 17
more_args            : 79
move                 : 102
numeric_expression   : 40 41 52 79
numeric_expression2  : 50
parameter            : 23
parameter_list       : 19 24
parameter_list2      : 23
pclear               : 111
pcolor               : 109
pdown                : 106
print_statement      : 128
program              : 0
program2             : 1 3
program3             : 1 5
psize                : 110
pup                  : 107
read_statement       : 129
return               : 127
rotate               : 103
seen_LSQUARE         : 70
seen_RSQUARE         : 70
seen_arg             : 79
seen_assignment1     : 84
seen_assignment2     : 84
seen_comp            : 41
seen_condition       : 92
seen_condition_block : 92
seen_for_exp         : 84
seen_func_id         : 75
seen_function_id     : 17
seen_id              : 11
seen_id_or_func      : 68
seen_loop_block      : 83
seen_lpar            : 62
seen_method_start    : 21
seen_rpar            : 62
seen_term            : 50
seen_while_LPAR      : 85
seen_while_exp       : 85
setp                 : 108
statement            : 98
superexpression      : 15 33 34 34 36 62 70 84 85 92 101 112 113 114 114 118 118 119 119 119 120 124 131
superexpression2     : 35
term                 : 50 57
term2                : 56
type                 : 7 17 26
variable_assignment  : 84 84 123
variable_declaration : 3 122
variable_declaration2 : 7 9
variable_declaration3 : 8
variable_declarator  : 8
variable_declarator2 : 11
variable_declarator3 : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program2 program3 main_ahead main_method
    (3) program2 -> . variable_declaration program2
    (4) program2 -> . empty
    (7) variable_declaration -> . type variable_declaration2
    (132) empty -> .
    (28) type -> . INT
    (29) type -> . DOUBLE
    (30) type -> . STRING
    (31) type -> . VOID

    FUNC            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)
    INT             shift and go to state 8
    DOUBLE          shift and go to state 2
    STRING          shift and go to state 5
    VOID            shift and go to state 6

    program                        shift and go to state 1
    program2                       shift and go to state 3
    variable_declaration           shift and go to state 4
    type                           shift and go to state 9
    empty                          shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (29) type -> DOUBLE .

    ID              reduce using rule 29 (type -> DOUBLE .)


state 3

    (1) program -> program2 . program3 main_ahead main_method
    (5) program3 -> . method_declaration program3
    (6) program3 -> . empty
    (17) method_declaration -> . FUNC type ID seen_function_id ( method_declaration2 method_declaration3
    (132) empty -> .

    FUNC            shift and go to state 12
    MAIN            reduce using rule 132 (empty -> .)

    method_declaration             shift and go to state 10
    empty                          shift and go to state 13
    program3                       shift and go to state 11

state 4

    (3) program2 -> variable_declaration . program2
    (3) program2 -> . variable_declaration program2
    (4) program2 -> . empty
    (7) variable_declaration -> . type variable_declaration2
    (132) empty -> .
    (28) type -> . INT
    (29) type -> . DOUBLE
    (30) type -> . STRING
    (31) type -> . VOID

    FUNC            reduce using rule 132 (empty -> .)
    MAIN            reduce using rule 132 (empty -> .)
    INT             shift and go to state 8
    DOUBLE          shift and go to state 2
    STRING          shift and go to state 5
    VOID            shift and go to state 6

    program2                       shift and go to state 14
    variable_declaration           shift and go to state 4
    type                           shift and go to state 9
    empty                          shift and go to state 7

state 5

    (30) type -> STRING .

    ID              reduce using rule 30 (type -> STRING .)


state 6

    (31) type -> VOID .

    ID              reduce using rule 31 (type -> VOID .)


state 7

    (4) program2 -> empty .

    FUNC            reduce using rule 4 (program2 -> empty .)
    MAIN            reduce using rule 4 (program2 -> empty .)


state 8

    (28) type -> INT .

    ID              reduce using rule 28 (type -> INT .)


state 9

    (7) variable_declaration -> type . variable_declaration2
    (8) variable_declaration2 -> . variable_declarator variable_declaration3
    (11) variable_declarator -> . ID seen_id variable_declarator2 variable_declarator3

    ID              shift and go to state 16

    variable_declarator            shift and go to state 15
    variable_declaration2          shift and go to state 17

state 10

    (5) program3 -> method_declaration . program3
    (5) program3 -> . method_declaration program3
    (6) program3 -> . empty
    (17) method_declaration -> . FUNC type ID seen_function_id ( method_declaration2 method_declaration3
    (132) empty -> .

    FUNC            shift and go to state 12
    MAIN            reduce using rule 132 (empty -> .)

    method_declaration             shift and go to state 10
    empty                          shift and go to state 13
    program3                       shift and go to state 18

state 11

    (1) program -> program2 program3 . main_ahead main_method
    (2) main_ahead -> .

    MAIN            reduce using rule 2 (main_ahead -> .)

    main_ahead                     shift and go to state 19

state 12

    (17) method_declaration -> FUNC . type ID seen_function_id ( method_declaration2 method_declaration3
    (28) type -> . INT
    (29) type -> . DOUBLE
    (30) type -> . STRING
    (31) type -> . VOID

    INT             shift and go to state 8
    DOUBLE          shift and go to state 2
    STRING          shift and go to state 5
    VOID            shift and go to state 6

    type                           shift and go to state 20

state 13

    (6) program3 -> empty .

    MAIN            reduce using rule 6 (program3 -> empty .)


state 14

    (3) program2 -> variable_declaration program2 .

    FUNC            reduce using rule 3 (program2 -> variable_declaration program2 .)
    MAIN            reduce using rule 3 (program2 -> variable_declaration program2 .)


state 15

    (8) variable_declaration2 -> variable_declarator . variable_declaration3
    (9) variable_declaration3 -> . COMMA variable_declaration2
    (10) variable_declaration3 -> . SEMICOLON

    COMMA           shift and go to state 23
    SEMICOLON       shift and go to state 22

    variable_declaration3          shift and go to state 21

state 16

    (11) variable_declarator -> ID . seen_id variable_declarator2 variable_declarator3
    (12) seen_id -> .

    LSQUARE         reduce using rule 12 (seen_id -> .)
    =               reduce using rule 12 (seen_id -> .)
    COMMA           reduce using rule 12 (seen_id -> .)
    SEMICOLON       reduce using rule 12 (seen_id -> .)

    seen_id                        shift and go to state 24

state 17

    (7) variable_declaration -> type variable_declaration2 .

    ID              reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    IF              reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    RETURN          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PRINT           reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    SCAN            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    INT             reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    DOUBLE          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    STRING          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    VOID            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    FOR             reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    WHILE           reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    MOVE            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    ROTATE          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    ARC             reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    HOME            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PDOWN           reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PUP             reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    SETP            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PCOLOR          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PSIZE           reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    PCLEAR          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    (               reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    CSTDOUBLE       reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    CSTINT          reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    CSTSTRING       reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    RBRACKET        reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    FUNC            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)
    MAIN            reduce using rule 7 (variable_declaration -> type variable_declaration2 .)


state 18

    (5) program3 -> method_declaration program3 .

    MAIN            reduce using rule 5 (program3 -> method_declaration program3 .)


state 19

    (1) program -> program2 program3 main_ahead . main_method
    (27) main_method -> . MAIN CHEESE ( ) block_statement

    MAIN            shift and go to state 26

    main_method                    shift and go to state 25

state 20

    (17) method_declaration -> FUNC type . ID seen_function_id ( method_declaration2 method_declaration3

    ID              shift and go to state 27


state 21

    (8) variable_declaration2 -> variable_declarator variable_declaration3 .

    INT             reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    DOUBLE          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    STRING          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    VOID            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    FUNC            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    MAIN            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    ID              reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    IF              reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    RETURN          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PRINT           reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    SCAN            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    FOR             reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    WHILE           reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    MOVE            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    ROTATE          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    ARC             reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    HOME            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PDOWN           reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PUP             reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    SETP            reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PCOLOR          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PSIZE           reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    PCLEAR          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    (               reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    CSTDOUBLE       reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    CSTINT          reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    CSTSTRING       reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)
    RBRACKET        reduce using rule 8 (variable_declaration2 -> variable_declarator variable_declaration3 .)


state 22

    (10) variable_declaration3 -> SEMICOLON .

    INT             reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    DOUBLE          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    STRING          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    VOID            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    FUNC            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    MAIN            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    ID              reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    IF              reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    RETURN          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PRINT           reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    SCAN            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    FOR             reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    WHILE           reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    MOVE            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    ROTATE          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    ARC             reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    HOME            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PDOWN           reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PUP             reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    SETP            reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PCOLOR          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PSIZE           reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    PCLEAR          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    (               reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    CSTDOUBLE       reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    CSTINT          reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    CSTSTRING       reduce using rule 10 (variable_declaration3 -> SEMICOLON .)
    RBRACKET        reduce using rule 10 (variable_declaration3 -> SEMICOLON .)


state 23

    (9) variable_declaration3 -> COMMA . variable_declaration2
    (8) variable_declaration2 -> . variable_declarator variable_declaration3
    (11) variable_declarator -> . ID seen_id variable_declarator2 variable_declarator3

    ID              shift and go to state 16

    variable_declarator            shift and go to state 15
    variable_declaration2          shift and go to state 28

state 24

    (11) variable_declarator -> ID seen_id . variable_declarator2 variable_declarator3
    (13) variable_declarator2 -> . LSQUARE CSTINT RSQUARE
    (14) variable_declarator2 -> . empty
    (132) empty -> .

    LSQUARE         shift and go to state 29
    =               reduce using rule 132 (empty -> .)
    COMMA           reduce using rule 132 (empty -> .)
    SEMICOLON       reduce using rule 132 (empty -> .)

    empty                          shift and go to state 31
    variable_declarator2           shift and go to state 30

state 25

    (1) program -> program2 program3 main_ahead main_method .

    $end            reduce using rule 1 (program -> program2 program3 main_ahead main_method .)


state 26

    (27) main_method -> MAIN . CHEESE ( ) block_statement

    CHEESE          shift and go to state 32


state 27

    (17) method_declaration -> FUNC type ID . seen_function_id ( method_declaration2 method_declaration3
    (18) seen_function_id -> .

    (               reduce using rule 18 (seen_function_id -> .)

    seen_function_id               shift and go to state 33

state 28

    (9) variable_declaration3 -> COMMA variable_declaration2 .

    INT             reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    DOUBLE          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    STRING          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    VOID            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    FUNC            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    MAIN            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    ID              reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    IF              reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    RETURN          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PRINT           reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    SCAN            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    FOR             reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    WHILE           reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    MOVE            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    ROTATE          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    ARC             reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    HOME            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PDOWN           reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PUP             reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    SETP            reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PCOLOR          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PSIZE           reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    PCLEAR          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    (               reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    CSTDOUBLE       reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    CSTINT          reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    CSTSTRING       reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)
    RBRACKET        reduce using rule 9 (variable_declaration3 -> COMMA variable_declaration2 .)


state 29

    (13) variable_declarator2 -> LSQUARE . CSTINT RSQUARE

    CSTINT          shift and go to state 34


state 30

    (11) variable_declarator -> ID seen_id variable_declarator2 . variable_declarator3
    (15) variable_declarator3 -> . = superexpression
    (16) variable_declarator3 -> . empty
    (132) empty -> .

    =               shift and go to state 35
    COMMA           reduce using rule 132 (empty -> .)
    SEMICOLON       reduce using rule 132 (empty -> .)

    empty                          shift and go to state 36
    variable_declarator3           shift and go to state 37

state 31

    (14) variable_declarator2 -> empty .

    =               reduce using rule 14 (variable_declarator2 -> empty .)
    COMMA           reduce using rule 14 (variable_declarator2 -> empty .)
    SEMICOLON       reduce using rule 14 (variable_declarator2 -> empty .)


state 32

    (27) main_method -> MAIN CHEESE . ( ) block_statement

    (               shift and go to state 38


state 33

    (17) method_declaration -> FUNC type ID seen_function_id . ( method_declaration2 method_declaration3

    (               shift and go to state 39


state 34

    (13) variable_declarator2 -> LSQUARE CSTINT . RSQUARE

    RSQUARE         shift and go to state 40


state 35

    (15) variable_declarator3 -> = . superexpression
    (35) superexpression -> . expression superexpression2
    (40) expression -> . numeric_expression compare
    (50) numeric_expression -> . term seen_term numeric_expression2
    (56) term -> . factor term2
    (61) factor -> . cst_expression
    (62) factor -> . ( seen_lpar superexpression ) seen_rpar
    (65) cst_expression -> . CSTDOUBLE
    (66) cst_expression -> . CSTINT
    (67) cst_expression -> . CSTSTRING
    (68) cst_expression -> . ID seen_id_or_func cst_expression2

    (               shift and go to state 41
    CSTDOUBLE       shift and go to state 49
    CSTINT          shift and go to state 50
    CSTSTRING       shift and go to state 48
    ID              shift and go to state 46

    superexpression                shift and go to state 42
    factor                         shift and go to state 43
    expression                     shift and go to state 45
    numeric_expression             shift and go to state 44
    term                           shift and go to state 47
    cst_expression                 shift and go to state 51

state 36

    (16) variable_declarator3 -> empty .

    COMMA           reduce using rule 16 (variable_declarator3 -> empty .)
    SEMICOLON       reduce using rule 16 (variable_declarator3 -> empty .)


state 37

    (11) variable_declarator -> ID seen_id variable_declarator2 variable_declarator3 .

    COMMA           reduce using rule 11 (variable_declarator -> ID seen_id variable_declarator2 variable_declarator3 .)
    SEMICOLON       reduce using rule 11 (variable_declarator -> ID seen_id variable_declarator2 variable_declarator3 .)


state 38

    (27) main_method -> MAIN CHEESE ( . ) block_statement

    )               shift and go to state 52


state 39

    (17) method_declaration -> FUNC type ID seen_function_id ( . method_declaration2 method_declaration3
    (19) method_declaration2 -> . parameter_list
    (20) method_declaration2 -> . empty
    (23) parameter_list -> . parameter parameter_list2
    (132) empty -> .
    (26) parameter -> . type ID
    (28) type -> . INT
    (29) type -> . DOUBLE
    (30) type -> . STRING
    (31) type -> . VOID

    )               reduce using rule 132 (empty -> .)
    INT             shift and go to state 8
    DOUBLE          shift and go to state 2
    STRING          shift and go to state 5
    VOID            shift and go to state 6

    empty                          shift and go to state 56
    method_declaration2            shift and go to state 54
    type                           shift and go to state 53
    parameter                      shift and go to state 55
    parameter_list                 shift and go to state 57

state 40

    (13) variable_declarator2 -> LSQUARE CSTINT RSQUARE .

    =               reduce using rule 13 (variable_declarator2 -> LSQUARE CSTINT RSQUARE .)
    COMMA           reduce using rule 13 (variable_declarator2 -> LSQUARE CSTINT RSQUARE .)
    SEMICOLON       reduce using rule 13 (variable_declarator2 -> LSQUARE CSTINT RSQUARE .)


state 41

    (62) factor -> ( . seen_lpar superexpression ) seen_rpar
    (63) seen_lpar -> .

    (               reduce using rule 63 (seen_lpar -> .)
    CSTDOUBLE       reduce using rule 63 (seen_lpar -> .)
    CSTINT          reduce using rule 63 (seen_lpar -> .)
    CSTSTRING       reduce using rule 63 (seen_lpar -> .)
    ID              reduce using rule 63 (seen_lpar -> .)

    seen_lpar                      shift and go to state 58

state 42

    (15) variable_declarator3 -> = superexpression .

    COMMA           reduce using rule 15 (variable_declarator3 -> = superexpression .)
    SEMICOLON       reduce using rule 15 (variable_declarator3 -> = superexpression .)


state 43

    (56) term -> factor . term2
    (57) term2 -> . geomOp term
    (58) term2 -> . empty
    (59) geomOp -> . *
    (60) geomOp -> . /
    (132) empty -> .

    *               shift and go to state 61
    /               shift and go to state 59
    +               reduce using rule 132 (empty -> .)
    -               reduce using rule 132 (empty -> .)
    CEQ             reduce using rule 132 (empty -> .)
    CGT             reduce using rule 132 (empty -> .)
    CGE             reduce using rule 132 (empty -> .)
    CLT             reduce using rule 132 (empty -> .)
    CLE             reduce using rule 132 (empty -> .)
    CNE             reduce using rule 132 (empty -> .)
    AND             reduce using rule 132 (empty -> .)
    OR              reduce using rule 132 (empty -> .)
    COMMA           reduce using rule 132 (empty -> .)
    SEMICOLON       reduce using rule 132 (empty -> .)
    )               reduce using rule 132 (empty -> .)
    RSQUARE         reduce using rule 132 (empty -> .)

    geomOp                         shift and go to state 62
    term2                          shift and go to state 60
    empty                          shift and go to state 63

state 44

    (40) expression -> numeric_expression . compare
    (41) compare -> . compare_symbols numeric_expression seen_comp
    (42) compare -> . empty
    (43) compare_symbols -> . CEQ
    (44) compare_symbols -> . CGT
    (45) compare_symbols -> . CGE
    (46) compare_symbols -> . CLT
    (47) compare_symbols -> . CLE
    (48) compare_symbols -> . CNE
    (132) empty -> .

    CEQ             shift and go to state 67
    CGT             shift and go to state 68
    CGE             shift and go to state 71
    CLT             shift and go to state 65
    CLE             shift and go to state 69
    CNE             shift and go to state 70
    AND             reduce using rule 132 (empty -> .)
    OR              reduce using rule 132 (empty -> .)
    COMMA           reduce using rule 132 (empty -> .)
    SEMICOLON       reduce using rule 132 (empty -> .)
    )               reduce using rule 132 (empty -> .)
    RSQUARE         reduce using rule 132 (empty -> .)

    compare                        shift and go to state 64
    compare_symbols                shift and go to state 66
    empty                          shift and go to state 72

state 45
